Switch to Llama2 model
Signed-off-by: Prasad Ghangal <prasad.ghangal@gmail.com>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,7 @@
       <div class="infoData">
         <div>
           <h2 class="gener8">
-            Gener8
+            Gener8-Llama2
           </h2>
           <span id="alpha">alpha</span>
           <p class="secondaryData">
@@ -53,11 +53,6 @@
         </div>
       </div>
       <div class="sidepanel">
-        <div class="sidebutton">
-          <a class="github-button" href="https://github.com/PrasadG193/Gener8" data-size="large" aria-label="View PrasadG193/Gener8 on GitHub">View Source</a>
-          <a class="github-button" href="https://github.com/PrasadG193/Gener8" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star PrasadG193/Gener8 on GitHub">Star</a>
-          <a class="github-button" href="https://github.com/PrasadG193/Gener8/fork" data-size="large" data-show-count="true" aria-label="Fork PrasadG193/Gener8 on GitHub">Fork</a>
-        </div>
         <label class="switch" id="changeTheme">
           <input type="checkbox" id="theme-check">
           <span class="slider round"></span>
@@ -96,11 +91,6 @@
           </div>
         </div>
         <hr>
-        <p class="credits">
-        Gener8 is powered by <a href="https://openai.com/blog/gpt-3-apps">OpenAI GPT-3</a><br>
-        Not getting expected result? Please help us improve it by raising issues on the <a href="https://github.com/PrasadG193/Gener8"> Github repo</a><br>
-        Trying to generate Kubernetes client-go code for resource YAMLs? Checkout <a href="https://kyaml2go.prasadg.dev">kyaml2go</a><br>
-        </p>
       </div> 
     </div><!-- /container -->
   </main>
@@ -110,7 +100,6 @@
   <script src="plugin/codemirror/mode/yaml/yaml.js"></script>
   <script src="plugin/codemirror/addon/display/placeholder.js"></script>
   <script src="./index.js"></script>
-  <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="PrasadG193" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. You can now buy me a coffee!" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 
 </html>
